--- a/packages.config
+++ b/packages.config
@@ -10,12 +10,13 @@
   <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net471" />
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net471" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
-  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net471" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net471" />
   <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net471" />
-  <package id="Svg" version="3.1.1" targetFramework="net471" />
+  <package id="Svg" version="3.2.3" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
   <package id="System.Console" version="4.3.0" targetFramework="net471" />
@@ -31,6 +32,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net471" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net471" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net471" />
@@ -41,6 +43,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net471" />
@@ -56,6 +59,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net471" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net471" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net471" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net471" />
   <package id="unsplasharp.api" version="0.6.0" targetFramework="net471" />
