--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fizzler" version="1.2.0" targetFramework="net471" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net471" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net471" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="NAudio" version="1.10.0" targetFramework="net471" />
@@ -14,9 +15,10 @@
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net471" />
   <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net471" />
+  <package id="SharpGLTF.Core" version="1.0.0-alpha0023" targetFramework="net471" />
   <package id="Svg" version="3.2.3" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
   <package id="System.Console" version="4.3.0" targetFramework="net471" />
@@ -32,7 +34,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net471" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net471" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net471" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net471" />
@@ -43,7 +45,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net471" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net471" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net471" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net471" />
@@ -55,9 +57,12 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net471" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net471" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net471" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net471" />
+  <package id="System.Text.Json" version="5.0.2" targetFramework="net471" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net471" />
   <package id="System.Threading" version="4.3.0" targetFramework="net471" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net471" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net471" />
